--- a/.github/workflows/web-e2e.yml
+++ b/.github/workflows/web-e2e.yml
@@ -41,9 +41,19 @@ jobs:
         env:
           CI: 'true'
 
+      # Uploads the Playwright HTML report regardless of pass/fail
       - name: Upload Playwright report (always)
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: apps/web/playwright-report
+
+      # Upload screenshots captured by apps/web/tests/snapshots.spec.ts
+      - name: Upload design snapshots (always)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: design-snapshots
+          path: docs/static/images/design/*.png
+          if-no-files-found: warn
