--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,19 +7,18 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-
     "test": "playwright test",
     "test:headed": "playwright test --headed",
     "test:watch": "playwright test --ui",
     "test:snapshots": "playwright test tests/snapshots.spec.ts",
     "report": "playwright show-report",
-
     "e2e": "playwright test",
     "e2e:ui": "playwright test --ui",
     "e2e:ci": "playwright test --reporter=html"
   },
   "dependencies": {
     "next": "14.x",
+    "next-themes": "^0.4.6",
     "react": "18.x",
     "react-dom": "18.x"
   },
