--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -10,10 +10,13 @@
     "dev": "tsx src/index.ts"
   },
   "dependencies": {
-    "discord.js": "^14.21.0"
+    "discord.js": "^14.21.0",
+    "mongodb": "^6.18.0"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "tsx": "^4.20.4",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^2.0.5"
   }
 }
