--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,9 +27,13 @@
     "@types/node": "^20.19.11",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "autoprefixer": "^10.4.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.3.3"
   }
 }
