--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc -p .",
     "start": "node dist/index.js",
-    "dev": "tsx src/index.ts"
+    "dev": "tsx src/index.ts",
+    "test": "vitest run"
   },
   "dependencies": {
     "discord.js": "^14.21.0",
@@ -17,6 +18,6 @@
     "@types/node": "^24.3.0",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2",
-    "vitest": "^2.0.5"
+    "vitest": "^2.1.9"
   }
 }
