--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -p .",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "discord.js": "^14.21.0",
