--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "e2e:ci": "playwright test --reporter=html"
   },
   "dependencies": {
+    "mongodb": "^6.18.0",
     "next": "14.x",
     "next-themes": "^0.4.6",
     "react": "18.x",
